--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           pytest -q
 
   gemini_integration:
-    if: github.ref == 'refs/heads/main' && secrets.GEMINI_API_KEY != ''
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -40,7 +40,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.in
+      - name: Check GEMINI_API_KEY exists
+        run: |
+          if [ -z "${{ secrets.GEMINI_API_KEY }}" ]; then
+            echo "GEMINI_API_KEY not set; skipping Gemini integration job.";
+            exit 0;
+          fi
+
       - name: Run Gemini integration smoke test
+        if: ${{ secrets.GEMINI_API_KEY != '' }}
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GEMINI_ENABLED: 'true'
