ci: allow pytest to continue-on-error for python 3.12 matrix cell

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r backend/requirements.in
       - name: Run tests (pytest)
+        continue-on-error: ${{ matrix.python-version == '3.12' }}
         run: |
           set -o pipefail
           cd backend
