--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,17 @@ jobs:
         python-version: [3.11, 3.12]
     env:
       PYTHONUNBUFFERED: 1
+      DEFAULT_PYTHON_VERSION: '3.11'
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Mark default runner
+        if: ${{ matrix.python-version == env.DEFAULT_PYTHON_VERSION }}
+        run: |
+          echo "Default python runner: ${{ matrix.python-version }}"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
