--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,12 @@
+# Example env for backend
+GEMINI_ENABLED=false
 GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_BASE_URL=https://api.gemini.example/v1
+GEMINI_TIMEOUT=30
+
+# For local dev
+PYTHON_ENV=development
+
+# CI settings (set via repository secrets in GitHub Actions)
+# GEMINI_ENABLED should be true in CI only when secrets are available
+# GEMINI_API_KEY should be stored in GitHub Actions secrets
